@@ -1,3 +1,15 @@
+2013-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	Avoid various gcc-4.6 warnings.
+	* src/cidtype2.c, src/dvipdfmx.c, src/fontmap.c, src/otl_conf.c,
+	src/pdfencoding.c, src/spc_pdfm.c, src/tt_cmap.c: Do not use
+	unsafe casts (char **) -> (const char **).
+	* src/bmpimage.c, src/cidtype0.c, src/cidtype2.c, src/dvi.c,
+	src/jpegimage.c, src/pdffont.c, src/pkfont.c, src/tt_aux.c,
+	src/tt_cmap.c, src/tt_glyf.c, src/tt_post.c, src/type1.c,
+	src/type1c.c: Drop set but unused variables.
+	src/pdfdraw.c: Do not test '(&v) != NULL', this is always true.
+
 2012-12-12  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* src/tt_cmap.c: Make sure CMapName of embedded CMaps does not contain
